# POC-tchap_bot_n8n

./: .env.example  .gitignore  Dockerfile  Dockerfile.grist-mcp  MCP-REGISTRY-README.md  README-N8N-INTEGRATION.md  README-TCHAP-COMMANDES.md  README.md  analyse_mcp_webhooks.md  docker-compose.yml  grist_mcp.env  grist_mcp_server.py  n8n_setup_guide.md  pyproject.toml  readme.md  setup-mcp-orchestrator.ps1  setup-mcp-orchestrator.sh
albert-mcp-orchestrator/: Dockerfile  docker-compose.yml  pyproject.toml
albert-mcp-orchestrator/src/: config.py  main.py
albert-mcp-orchestrator/src/core/: __init__.py  auth.py  logging_config.py
albert-mcp-orchestrator/src/data/: metrics.py
albert-mcp-orchestrator/src/integration/: __init__.py  albert_client.py
albert-mcp-orchestrator/src/learning/: composition_optimizer.py  performance_analyzer.py  routes.py
albert-mcp-orchestrator/src/models/: composition.py
albert-mcp-orchestrator/src/orchestrator/: context_manager.py  data_transformer.py  execution_engine.py  intent_analyzer.py  monitor.py
albert-mcp-orchestrator/src/registry/: mcp_integration.py  mcp_registry.py  storage.py  vector_index.py
albert-mcp-orchestrator/src/routes/: __init__.py  compositions_routes.py  registry_routes.py  templates_routes.py  tools_routes.py
app/: .env.example  __main__.py  bot.py  bot_msg.py  commands.py  config.py  mcp_commands.py  n8n_commands.py  tchap_commands.py  webhook_commands.py  webhook_filter.py  webhook_mode.py  webhook_optimized.py  webhook_sender.py  webhook_server.py
docs/: INSTALLATION-MCP-REGISTRY.md  MCP-INTEGRATION.md  (+3 more)
(+69 files in other folders)
