[tool.poetry]
name = "albert-mcp-orchestrator"
version = "0.1.0"
description = "Système d'orchestration adaptative MCP pour Albert Tchapbot"
authors = ["Équipe Albert Tchap"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
redis-om = "^0.2.1"
sentence-transformers = "^2.2.2"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pyee = "^11.0.0"
aioredis = "^2.0.1"
tenacity = "^8.2.3"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 